@@ -2,6 +2,10 @@ package com.myserver;
 
 import java.io.*;
 import java.net.Socket;
+import java.nio.channels.FileChannel;
+import java.nio.channels.SocketChannel;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 public class MessageRunner extends Thread {
     private static final String CLOSE_CONNECTION_KEY = "-exit";
@@ -27,20 +31,19 @@ public class MessageRunner extends Thread {
     @Override
     public void run() {
         try {
-            String greetingsMassage = "[SERVER] "
-                    + client.getName()
-                    + "join to conversation";
-            sendResponse(greetingsMassage);
             while (isActive) {
                 String message = getRequest();
+
+                String response = "[" + client.getName() + "]: " + message + "\n";
 
                 String[] splitMessage = message.split(" ");
                 switch (splitMessage[0]) {
                     case CLOSE_CONNECTION_KEY -> disconnectClientFromServer();
-                    case SAVE_FILE_KEY -> saveFileFromClient();
-                    default -> sendResponse(message);
+                    case SAVE_FILE_KEY -> getFileFromClient();
+                    default -> Server.sendToEveryone(response);
                 }
             }
+            System.out.println("[" + client.getName() + "] left the chat");
         } catch (IOException e) {
             System.err.println(e);
         }
@@ -49,158 +52,60 @@ public class MessageRunner extends Thread {
     private void disconnectClientFromServer() {
         isActive = false;
         Server.deleteClientConnection(client);
-        System.out.println("Client left the chat " + client);
     }
 
-    private void saveFileFromClient() throws IOException {
-        //saveFileFromClient(clientSocket.getInputStream(), splitMessage[1]);
-        //File file = new File("/resources");
+    private void getFileFromClient() throws IOException {
+        String fileName = getRequest();
+        fileName = fileName.substring(0, fileName.length() - 2);
 
-        //Writer fwr = new FileWriter
-        //String fileName = getRequest(in);
-        String fileName = "file.txt";
-        String filePath = "/resources" + fileName;
-
-        InputStream inputStream = socket.getInputStream();
-        FileOutputStream fileReceive = new FileOutputStream("d:/file.txt", true);
-        //FileWriter fwr = new FileWriter(file);
-        byte[] bt = new byte[1024];
-        while ((inputStream.read(bt)) > 0) {
-            fileReceive.write(bt);
-            //fwr.write(bt);
-            //Files.write(Paths.get(filePath), bt, StandardOpenOption.APPEND);
+        Path filePath = Path.of("server/resources/" + client.getName());
+        System.out.println(Files.exists(filePath));
+        if(!Files.exists(filePath)) {
+            Files.createDirectories(filePath);
+            System.out.println(Files.exists(filePath));
         }
 
-        //Files.copy(inputStream, new File("d:/file0.txt").toPath());
-        out.flush();
-    }
-//
-//    public static void main(String[] args) {
-//        System.out.println("System started");
-//
-//        try {
-//            try {
-////                server = new ServerSocket(SERVER_SOCKET_PORT);
-////                System.out.println("Server started");
-//
-//                while (true) {
-//
-//
-////                    Socket clientSocket = server.accept();
-//
-//
-////                    try (BufferedReader in = new BufferedReader(
-////                            new InputStreamReader(clientSocket.getInputStream()));
-////                         BufferedWriter out = new BufferedWriter(
-////                                 new OutputStreamWriter(clientSocket.getOutputStream()))) {
-//
-//                    //if (in.)
-//                    while (true) {
-//
-//                        //System.out.println("1 ready");
-//                        String message = getRequest(in);
-//
-//                        if (message.equals("-exit")) {
-//                            clientSocket.close();
-//                            break;
-//                        }
-//                        String[] splitMessage = message.split(" ");
-//                        if (splitMessage[0].equals("-file")) {
-//                            //saveFileFromClient(clientSocket.getInputStream(), splitMessage[1]);
-//                            //File file = new File("/resources");
-//
-//                            //Writer fwr = new FileWriter
-//                            //String fileName = getRequest(in);
-//                            String fileName = "file.txt";
-//                            String filePath = "/resources" + fileName;
-//
-//                            InputStream inputStream = clientSocket.getInputStream();
-//                            FileOutputStream fileReceive = new FileOutputStream("d:/file.txt", true);
-//                            //FileWriter fwr = new FileWriter(file);
-//                            byte[] bt = new byte[1024];
-//                            while ((inputStream.read(bt)) > 0) {
-//                                fileReceive.write(bt);
-//                                //fwr.write(bt);
-//                                //Files.write(Paths.get(filePath), bt, StandardOpenOption.APPEND);
-//                            }
-//
-//                            //Files.copy(inputStream, new File("d:/file0.txt").toPath());
-//                            out.flush();
-//                        }
-//
-//                        sendResponse(out, message);
-//
-//
-//                    }
-////                    } finally {
-////                        clientSocket.close();
-////                    }
-//                }
-//            } finally {
-//                System.out.println("Server stopped");
-//                server.close();
-//            }
-//
-//
-//        } catch (IOException e) {
-//            System.err.println(e);
-//        }
-//
-//    }
+        //String filePath = "server/resources/"+ client.getName() + "/" + fileName;
 
-//    private static void saveFileFromClient(InputStream ins, String filePath) {
-////        ** -file путь_файлу_тут
-////        Отправка файла на сервер.
-////        В этот момент указанный файл принимается на стороне сервера и сохраняется в произвольном месте.
-////        Например: клиент пишет ... -file c:/path/to/data.txt
-//
-//        File file = new File("/resources");
-//        FileReader fr = new FileReader(filePath);
-//        try (
-//        FileWriter fwr = new FileWriter(fr)) {
-//            fwr.
+        File file = new File(filePath + "/" + fileName);
+//        while (!file.createNewFile()) {
+//            fileName = "(1)" + fileName;
+//            file.renameTo(new File(filePath + "/" + fileName));
 //        }
+
+        InputStream inputStream = socket.getInputStream();
+        FileOutputStream fileReceive = new FileOutputStream(file, true);
+
+//        SocketChannel sc = socket.getChannel();
+//        FileChannel fc = new FileOutputStream(file).getChannel();
 //
-//        try {
-////            URL url = new URL("https://www.google.com.ua/images/srpr/logo11w.png");
-////            InputStream inputStream = url.openStream();
-////            Files.copy(inputStream, new File("c:/google.png").toPath());
 //
-//
-//
-//            InputStream fis = new FileInputStream(filePath);
-//            Writer writer = new FileWriter();
-//            Files.copy(filePath,fis);
-//        } catch (FileNotFoundException e) {
-//            throw new RuntimeException(e);
+//        fc.transferFrom(sc,0, fc.size());
+
+        Files.copy(inputStream, file.toPath());
+
+//        byte[] bt = new byte[1024];
+//        while ((inputStream.read(bt)) > 0) {
+//            fileReceive.write(bt);
+//            System.out.print("1");
 //        }
-//
-//
-//        try (OutputStream out = new FileOutputStream(file, false);
-//             Writer writer = new OutputStreamWriter(out)) {
-//            writer.write();
-//        } catch (IOException e) {
-//            throw new RuntimeException(e);
-//        }
-//    }
+        out.flush();
+        System.out.println("end");
+
+        sendResponse("[SERVER]: done!");
+    }
 
     private String getRequest() throws IOException {
-        String message = in.readLine();
-        System.out.println(message);
-        return message;
+        return in.readLine();
     }
 
-    private void sendResponse(String message) throws IOException {
-        out.write("Hi, this is Server! You recently wrote:" + message + "\n");
-        //System.out.println("3 Hi, this is Server! You recently wrote:" + message);
-        out.flush();
-        //System.out.println("4");
+    void sendResponse(String message) {
+        try {
+            System.out.print(message);
+            out.write(message);
+            out.flush();
+        } catch (IOException e) {
+            System.err.println(e);
+        }
     }
-
-//    private void send(String msg) {
-//        try {
-//            out.write(msg + "\n");
-//            out.flush();
-//        } catch (IOException ignored) {}
-//    }
 }
